--- a/githubworkflow/train_model.yml
+++ b/githubworkflow/train_model.yml
@@ -3,7 +3,7 @@ name: Train Model like artifact to wandb
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'src/model/train.py'
 
